--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;600&family=Poppins:wght@300&family=Roboto+Condensed:wght@300&family=Roboto+Flex:opsz,wght@8..144,200&display=swap");
+
+:root {
+  --primary-white: #fff;
+  --primary-orange:#f9ab00;
+  --primary-dark: rgba(255,255,255,0)
+  --blue: #1e90ff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Roboto condensed" sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*****************************Navbar************************************/
+.logo {
+  width: 6.25rem;
+  border-radius: 10rem;
+ 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+/**********Menu-Link**********/
+nav a.nav-link {
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+  color: var(--primary-white) !important;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+nav ul li {
+  text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  border-top:  0.1875rem solid var(--primary-dark);
 }
+
+.navbar-brand{
+  max-width: 17.25rem;
+  padding: 0 !important;
+  border-radius: 10rem;
+ /* height: 6rem !important; */
+
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+  border-top: 0.1875rem solid var(--primary-orange); 
+}
+
+.navbar-nav >li > a:hover{
+   border-top: 0.1875rem solid var(--primary-orange); 
+}
+
