--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   --primary-orange:#f9ab00;
   --primary-dark: rgba(255,255,255,0)
   --blue: #1e90ff;
+  --primary-black: black;
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
@@ -47,6 +50,15 @@ nav ul li {
 
 }
 
+@media(max-width:768px){
+.navbar-brand{
+width: 7rem;
+}
+  }
+
+
+
+
 .navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
   border-top: 0.1875rem solid var(--primary-orange); 
 }
@@ -55,3 +67,80 @@ nav ul li {
    border-top: 0.1875rem solid var(--primary-orange); 
 }
 
+/***********************HEADER***************************/
+
+.header-wraper{
+  position: relative;
+  background: url(portfolio-image.png) no-repeat;
+background-size: cover;
+  background-position: center;
+  height: 90vh;
+
+}
+
+.main-info{
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: Roboto condensed sans-serif;
+  z-index: 1;
+ 
+}
+
+.main-info h1{
+  color: var(--primary-white);
+  text-transform: uppercase;
+}
+
+
+
+/**********TYPED TEXT****************/
+
+.typed-text{
+  font-size: 2rem;
+
+  text-decoration: none;
+  color: var(--primary-white);
+}
+
+
+/*********HEADER MAIN OFFER BUTTON******/
+.btn-main-offer{
+border: 1px solid var(--primary-red);
+text-transform: uppercase;
+border-radius: 0;
+padding: 0.625rem 0.75rem, 0.75rem 0.75rem;
+color: var(--primary-black);
+margin: 2rem;
+margin-top: 5rem;
+font-size: 1.5rem;
+text-decoration: none;
+font-family: "Roboto condensed" sans-serif;
+font-size: large;
+}
+
+.btn-main-offer:hover{
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  color: var(--primary-white);
+ transition: .2s ease-in-out;
+}
+
+
+@media(max-width:768px){
+ .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+}
+
+.typed-text{
+  font-size: 1.7rem !important;
+}
