--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,5 +1,5 @@
 body{
-		background-color: #25274d;
+		background-color: #cdcfe8;
 	}
 	.contact{
 		padding: 4%;
@@ -38,3 +38,5 @@ body{
 	.contact-form button:focus{
 		box-shadow:none;
 	}
+
+	
