--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root {
   --primary-white: #fff;
   --primary-orange:#f9ab00;
-  --primary-dark: rgba(255,255,255,0)
+  --primary-dark: rgba(255,255,255,0);
   --blue: #1e90ff;
   --primary-black: black;
   --primary-red: #ef4035;
